# mineclone

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  dist.py
assets/shaders/: block.frag  block.vert  combine.frag  combine.vert  lines.frag  lines.vert  main.frag  model.frag  model.vert  skyDome.frag  skyDome.vert  ui.frag  ui.vert  water.frag  water.vert
client/: CMakeLists.txt  application.cpp  application.hpp  config.cpp  config.hpp  game.cpp  game.hpp  main.cpp
client/core/: camera.cpp  camera.hpp  drawContext.hpp  input.cpp  input.hpp  object.cpp  object.hpp  util.cpp  util.hpp
client/core/graphics/: camera.hpp  drawCommand.cpp  drawCommand.hpp  drawContext.hpp  font.cpp  font.hpp  framebuffer.cpp  framebuffer.hpp  lines.cpp  lines.hpp  material.hpp  mesh.cpp  mesh.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  transfom.cpp  transform.hpp
client/core/managers/: assetManager.cpp  assetManager.hpp  networkManager.cpp  networkManager.hpp
client/game/: block.cpp  block.hpp  chunkData.cpp  chunkData.hpp  chunkMeshBuildQueue.cpp  chunkMeshBuildQueue.hpp  collision.cpp  collision.hpp  gameState.cpp  gameState.hpp  inventory.cpp  inventory.hpp  meshData.hpp  skyDome.cpp  skyDome.hpp  terrain.cpp  terrain.hpp  world.cpp  world.hpp  worldLoader.cpp  worldLoader.hpp
client/game/objects/: chunkObject.cpp  chunkObject.hpp  player.cpp  player.hpp  skyDome.cpp  skyDome.hpp
client/imgui/: infoView.cpp  infoView.hpp
common/: CMakeLists.txt  block.hpp  byteStream.hpp  chunkData.cpp  chunkData.hpp  gamePacket.hpp  networkObject.hpp  objectsData.hpp  world.cpp  world.hpp
server/: CMakeLists.txt  game.cpp  game.hpp  main.cpp  server.cpp  server.hpp  terrain.cpp  terrain.hpp  user.cpp  user.hpp
